<resources>
    <string name="app_name">우피치</string>
    <string name="long_text">동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르</string>
    <string name="medium_text">동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해물과백두산이마르고닳도록동해</string>
    <string name="onboarding_title1">내가 원하는 스포츠\n크루를 한 눈에</string>
    <string name="onboarding_title2">자유롭게 만나는\n스포츠 메이트</string>
    <string name="onboarding_title3">내 활동에서 확인하는\n나의 크루 이야기</string>
    <string name="onboarding_title4">피드를 통해 나누는\n스포츠 정신!</string>
    <string name="onboarding_subtitle1">혼자할 수 없는 다양한 크루 스포츠에 가입해보세요.</string>
    <string name="onboarding_subtitle2">번개를 통해 종목에 상관없이 메이트를 찾아보세요.</string>
    <string name="onboarding_subtitle3">공지사항부터 사진까지 크루 소식을 확인하세요.</string>
    <string name="onboarding_subtitle4">서로의 스포츠 활동 사진을 공유하세요.</string>
    <string name="skip_onboarding">건너뛰기</string>
    <string name="not_member_yet">아직 회원이 아니신가요?</string>
    <string name="signup_with_email">이메일로 회원가입</string>
    <string name="login">로그인</string>
    <string name="login_pw">비밀번호</string>
    <string name="kakao_native_app_key">b587874a0a178d33f63d9dd3a38b35b9</string>
    <string name="login_kakao_access_denied_toast_message">접근이 거부 됨(동의 취소)</string>
    <string name="login_kakao_invalid_client_toast_message">유효하지 않은 앱</string>
    <string name="login_kakao_invalid_grant_toast_message">인증 수단이 유효하지 않아 인증할 수 없는 상태</string>
    <string name="login_kakao_invalid_request_toast_message">요청 파라미터 오류</string>
    <string name="login_kakao_invalid_scope_toast_message">유효하지 않은 scope ID</string>
    <string name="login_kakao_misconfigured_toast_message">설정이 올바르지 않음(android key hash)</string>
    <string name="login_kakao_server_error_toast_message">서버 내부 에러</string>
    <string name="login_kakao_unauthorized_toast_message">앱이 요청 권한이 없음</string>
    <string name="login_kakao_etc_toast_message">기타 오류</string>
    <string name="service_agreement_title_top">에 오신 것을</string>
    <string name="service_agreement_title_bottom">환영해요!</string>
    <string name="service_agreement_subtitle">서비스의 이용을 위하여 필수 약관 동의가 필요합니다.\n약관에 동의하시고 우피치를 이용해주세요.</string>
    <string name="agree_all">전체동의</string>
    <string name="terms_of_service_agreement">이용약관</string>
    <string name="terms_of_privacy_policy">개인정보 수집 및 이용</string>
    <string name="push_notification_agreement">푸시 알람 동의 (선택)</string>
    <string name="detail_agreement">보기</string>
    <string name="next_one_over_four">다음 (1/4)</string>
    <string name="next_two_over_four">다음 (2/4)</string>
    <string name="next_three_over_four">다음 (3/4)</string>
    <string name="next_four_over_five">다음 (4/5)</string>
    <string name="input_email_pw">이메일과 비밀번호\n입력해주세요.</string>
    <string name="email">이메일</string>
    <string name="allowed_email">사용 가능한 이메일입니다.</string>
    <string name="not_allowed_email">사용 불가능한 이메일입니다.</string>
    <string name="pw">비밀번호 (8자 이상 영문/숫자)</string>
    <string name="not_allowed_pw">사용하실 수 없는 비밀번호입니다.</string>
    <string name="certify_idcard">신분증을\n인증해주세요.</string>
    <string name="certify_idcard_subtitle">(주민등록증, 운전면허증, 청소년증)</string>
    <string name="certify_idcard_guide1">이름과 생년월일, 성별숫자가 꼭 보여야합니다.</string>
    <string name="certify_idcard_guide2">식별이 불가능할 경우 승인이 거부될 수 있습니다.</string>
    <string name="certify_idcard_guide3">신분증 정보는 성별 확인 후 즉시 폐기됩니다.</string>
    <string name="take_idcard_photo">신분증 촬영</string>
    <string name="retake">다시 찍기</string>
    <string name="use_photo">사진 사용</string>
    <string name="requested_id_certification">인증 요청이\n완료됐어요.</string>
    <string name="id_certification_process_guide">신분증 인증 승인은 24시간 이내 처리되며,\n푸쉬알림을 통해 확인할 수 있습니다.</string>
    <string name="done">완료</string>
    <string name="soccer_football">축구/풋살</string>
    <string name="badminton">배드민턴</string>
    <string name="volleyball">배구</string>
    <string name="basketball">농구</string>
    <string name="hiking">등산</string>
    <string name="running">러닝</string>
    <string name="etc">기타</string>
    <string name="set_profile">프로필을\n설정해주세요.</string>
    <string name="input_nickname">닉네임 (최대 6자)</string>
    <string name="input_introduction">자기소개를 입력해주세요.</string>
    <string name="introduction_length">%d/100</string>
    <string name="available_nickname">사용 가능한 닉네임입니다.</string>
    <string name="not_available_nickname">사용 불가능한 닉네임입니다.</string>
    <string name="input_etc_sport">기타 스포츠를 입력해주세요. (선택)</string>
    <string name="etc_sport_length">%d/20</string>
    <string name="select_sport_talent">실력을 선택해주세요.</string>
    <string name="sport_talent_good">상</string>
    <string name="sport_talent_medium">중</string>
    <string name="sport_talent_bad">하</string>
    <string name="selection">선택</string>
    <string name="select_age">연령대를\n선택해주세요.</string>
    <string name="teenager">10대</string>
    <string name="twenties">20대</string>
    <string name="thirties">30대</string>
    <string name="forties">40대</string>
    <string name="fifties">50대</string>
    <string name="welcome_title">님, 환영합니다</string>
    <string name="welcome_subtitle">우피치와 함께 신나고 건강하게 땀흘려봐요!</string>
    <string name="checkout_main">크루를 둘러보러 가볼까요?</string>
    <string name="warning_stop_signup">작성한 모든 기입정보가 삭제됩니다.\n회원가입을 그만두시겠습니까?</string>
    <string name="stop_signup">그만둘래요</string>
    <string name="continue_signup">계속 할래요</string>
    <string name="icon_warning_stop_signup">&#9888;&#65039;</string>
    <string name="home">홈</string>
    <string name="impromptu">번개</string>
    <string name="my_activity">내 활동</string>
    <string name="feed">피드</string>
    <string name="my_page">마이페이지</string>
    <string name="district">지역구</string>
    <string name="biweekly">(격)&#160;</string>
    <string name="moreThanOnceAWeek">&#160;+</string>
    <string name="no_crew">%s에 크루가 없어요.</string>
    <string name="crew">크루</string>
    <string name="introduction">소개</string>
    <string name="persons">인원:&#160;</string>
    <string name="age">연령:&#160;</string>
    <string name="beginner_centered">초보 중심</string>
    <string name="semi_expert_centered">중수 중심</string>
    <string name="expert_centered">고수</string>
    <string name="beginners_to_experts">초보부터 고수까지</string>
    <string name="has_lesson">레슨 운영</string>
    <string name="train_with_coach">코치님과 훈련</string>
    <string name="train_centered">훈련 중심</string>
    <string name="game_centered">경기 중심</string>
    <string name="supplies">준비물</string>
    <string name="what_is_visitors">손님이란?</string>
    <string name="visitor_explanation">손님 신청 시, 별다른 동호회 가입 절차 없이 하루 동안 기존 동호회 회원들과 함께 운동을 즐길 수 있습니다.</string>
    <string name="inquiry">문의</string>
    <string name="guidance">안내사항</string>
    <string name="join_as_visitor">손님으로 참여</string>
    <string name="join">가입하기</string>
    <string name="firecracker_emoji">&#127881;</string>
    <string name="join_success">가입 신청이 완료됐습니다!\n크루의 수락은 알림을 통해 확인하세요.</string>
    <string name="join_visitor_success">손님 신청이 완료됐습니다!\n크루의 수락은 알림을 통해 확인하세요.</string>
    <string name="confirmed">확인</string>
    <string name="crying_emoji">&#128546;</string>
    <string name="not_enough_info_title">잠깐만요! 프로필 정보가 부족해요.</string>
    <string name="not_enough_info_subtitle">모든 프로필 정보가 기입되어야\n크루에 신청할 수 있습니다.</string>
    <string name="go_fill_profile">프로필 작성하러 가기</string>
    <string name="join_visitor_bottom_sheet_title">손님으로 참여해 가입절차없이\n하루동안 크루에 참여해보세요!</string>
    <string name="join_visitor_step1">프로필 정보를 크루리더에게 제공합니다.</string>
    <string name="join_visitor_step2">해당 크루의 손님비는&#160;</string>
    <string name="join_visitor_step2_subtitle">(신청 승인 이후, 별도납부)</string>
    <string name="join_visitor_step3">희망하는 날짜를 선택해주세요.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="register">가입하기</string>
    <string name="end_sentence">&#160;입니다.</string>
    <string name="crew_guide1">가입 신청 및 손님 참여 신청 취소는&#160;</string>
    <string name="crew_guide1_2">마이페이지 \- 참여 신청한 크루 및 번개</string>
    <string name="crew_guide1_3">에서 가능합니다.\n(단, 손님 신청의 경우 운동 하루 전까지 취소 가능)</string>
    <string name="crew_guide2">가입 신청 및 손님 참여 신청 현황은&#160;</string>
    <string name="crew_guide2_2">마이페이지 \- 참여 신청한 크루 및 번개</string>
    <string name="crew_guide2_3">에서 확인 가능합니다.</string>
    <string name="crew_guide3">크루 가입 신청 승인 시 푸시 알람을 통해 알려드리며, 승인 시부터 내 활동에서 가입한 크루의 소식을 확인 가능합니다.</string>
    <string name="cannot_apply_for_self_created_crew">본인이 생성한 크루는 신청이 불가능해요</string>
    <string name="search">검색</string>
    <string name="search_tab_crew">크루</string>
    <string name="search_tab_impromptu">번개</string>
    <string name="no_search_result">\‘%s\’에 대한 결과가 없어요</string>
    <string name="filter">필터</string>
    <string name="apply">적용하기</string>
    <string name="initialize">초기화</string>
    <string name="event">종목</string>
    <string name="day">요일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>
    <string name="time">시간</string>
    <string name="crew_member_num">크루원 수</string>
    <string name="age_group">연령대</string>
    <string name="over_fifties">50대 이상</string>
    <string name="regardless_of_age">연령무관</string>
    <string name="less_than_ten">10명 이하</string>
    <string name="more_than_ten_less_than_thirty">11~30명</string>
    <string name="more_than_thirty_less_than_fifty">31~50명</string>
    <string name="more_than_fifty_less_than_seventy">31~50명</string>
    <string name="more_than_seventy">70명 초과</string>
    <string name="notification">알림</string>
    <string name="no_notification">알림이 없어요</string>
    <string name="create_crew">크루 만들기</string>
    <string name="select_crew_sport">크루의 종목을\n선택해주세요.</string>
    <string name="one_over_seven">다음 (1/7)</string>
    <string name="two_over_seven">다음 (2/7)</string>
    <string name="three_over_seven">다음 (3/7)</string>
    <string name="four_over_seven">다음 (4/7)</string>
    <string name="five_over_seven">다음 (5/7)</string>
    <string name="six_over_seven">다음 (6/7)</string>
    <string name="location_of_crew">지역과 장소는\n어디인가요?</string>
    <string name="select_dong">동 선택</string>
    <string name="location">장소</string>
    <string name="input_location">장소를 입력해주세요. (선택)</string>
    <string name="empty_location_warning">* 공란 시 \'장소 미정\' 표기됩니다.</string>
    <string name="select_dong_bottom_sheet">동을 선택해주세요.</string>
    <string name="crew_basic_info">크루 기본 정보가\n궁금해요!</string>
    <string name="crew_name">크루명</string>
    <string name="input_crew_name">크루 이름을 알려주세요.</string>
    <string name="current_crew_size">현재 크루원 수</string>
    <string name="crew_size_hint">000</string>
    <string name="people_count_measure">명</string>
    <string name="repetition_possible">(중복 선택 가능)</string>
    <string name="extra_info">추가정보(선택)</string>
    <string name="crew_schedule">크루의 정기일정을\n알려주세요.</string>
    <string name="select_time">시간을 선택해주세요.</string>
    <string name="every_other_week">격주</string>
    <string name="crew_fee">회비는 얼마인가요?</string>
    <string name="fee_hint">000\,000</string>
    <string name="fee_measure">원</string>
    <string name="no_fee">회비 없어요!</string>
    <string name="profile">프로필</string>
    <string name="select_region">지역을\n선택해주세요.</string>
    <string name="select_region_btn">지역구 선택</string>
    <string name="select_sport">관심 스포츠를\n선택해주세요.</string>
    <string name="select_sport_at_least_one">(다중선택)</string>
</resources>