<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="bottomSheet"
            type="wupitch.android.presentation.ui.signup.SportTalentBottomSheetFragment" />

    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_select_talent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:includeFontPadding="false"
        android:text="@string/select_sport_talent"
        android:textColor="@color/main_black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/iv_close_bottom_sheet"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        android:src="@drawable/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_select_talent"
        android:onClick="@{() -> bottomSheet.checkIfTalentSelected()}"/>


    <RadioGroup
        android:id="@+id/radiogroup_sport_talent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        app:layout_constraintTop_toBottomOf="@id/tv_select_talent"
        android:layout_marginHorizontal="44dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >

        <RadioButton
            android:id="@+id/radiobtn_talent_good"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/selector_radio_sport_talent"
            android:button="@null"
            android:text="@string/sport_talent_good"
            android:gravity="center"
            android:textColor="@drawable/selector_text_color_sport_talent"
            android:textSize="16sp"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:includeFontPadding="false"
            android:layout_weight="1"
            android:layout_marginEnd="64dp"
            android:tag="0"
            />

        <RadioButton
            android:id="@+id/radiobtn_talent_medium"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/selector_radio_sport_talent"
            android:button="@null"
            android:text="@string/sport_talent_medium"
            android:gravity="center"
            android:textColor="@drawable/selector_text_color_sport_talent"
            android:textSize="16sp"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:includeFontPadding="false"
            android:layout_weight="1"
            android:layout_marginEnd="64dp"
            android:tag="1"
            />

        <RadioButton
            android:id="@+id/radiobtn_talent_bad"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/selector_radio_sport_talent"
            android:button="@null"
            android:text="@string/sport_talent_bad"
            android:gravity="center"
            android:textColor="@drawable/selector_text_color_sport_talent"
            android:textSize="16sp"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:includeFontPadding="false"
            android:layout_weight="1"
            android:tag="2"
            />

    </RadioGroup>



    <TextView
        android:id="@+id/btn_done_sport_talent"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:layout_constraintTop_toBottomOf="@id/radiogroup_sport_talent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="32dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/selection"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:includeFontPadding="false"
        android:background="@drawable/selector_btn_sport_talent"
        android:gravity="center"
        android:onClick="@{(view) -> bottomSheet.getTalentValue(view)}"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>