<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">
    <data>
        <variable
            name="fragment"
            type="wupitch.android.presentation.ui.signup.ProfileFragment" />
    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <wupitch.android.common.CustomToolbar
        android:id="@+id/toolbar_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:leftIcon="@drawable/left"
        app:rightIcon="@drawable/close"
        on_left_icon_click="@{fragment.navigateUp}"
        on_right_icon_click="@{fragment.showStopSignupDialog}"
        />

    <TextView
        android:id="@+id/tv_set_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_profile"
        android:textColor="@color/main_black"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:textSize="22sp"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@id/toolbar_profile"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="20dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_profile_nickname"
        android:layout_width="152dp"
        android:layout_height="44dp"
        app:layout_constraintTop_toBottomOf="@id/tv_set_profile"
        app:layout_constraintStart_toStartOf="@id/tv_set_profile"
        android:background="@drawable/background_edittext_profile"
        android:layout_marginTop="48dp"
        android:hint="@string/input_nickname"
        android:textSize="16sp"
        android:inputType="text"
        android:maxLines="1"
        android:maxLength="6"
        android:paddingStart="18dp"
        android:includeFontPadding="false"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:textColorHint="@color/gray02"/>

    <TextView
        android:id="@+id/tv_nickname_availability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tool:visibility="visible"
        app:layout_constraintStart_toEndOf="@id/et_profile_nickname"
        android:textColor="@drawable/selector_text_color_nickname_availability"
        android:textSize="12sp"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toBottomOf="@id/et_profile_nickname"
        android:layout_marginStart="15sp"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_profile_intro"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        app:layout_constraintTop_toBottomOf="@id/et_profile_nickname"
        android:background="@drawable/background_edittext_profile"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/input_introduction"
        android:textSize="16sp"
        android:gravity="center|top|start"
        android:inputType="text|textMultiLine"
        android:maxLength="100"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:textColorHint="@color/gray02"
        android:paddingTop="10dp"
        android:includeFontPadding="false"
        android:paddingHorizontal="18dp"/>

    <TextView
        android:id="@+id/tv_intro_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduction_length"
        app:layout_constraintTop_toBottomOf="@id/et_profile_intro"
        app:layout_constraintEnd_toEndOf="@id/et_profile_intro"
        android:textSize="12sp"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:textColor="@color/gray05"
        android:includeFontPadding="false"/>

    <TextView
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/done"
        android:gravity="center"
        android:textColor="@color/white"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:textSize="16sp"
        android:background="@drawable/selector_btn_signup"
        android:layout_marginHorizontal="20dp"
        android:onClick="@{(view) -> fragment.checkNavToWelcome(view)}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>