<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="fragment"
            type="wupitch.android.presentation.signup.SportFragment" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <wupitch.android.common.CustomToolbar
        android:id="@+id/toolbar_sport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:leftIcon="@drawable/left"
        app:rightIcon="@drawable/close"
        />

    <TextView
        android:id="@+id/tv_select_sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_sport"
        android:textColor="@color/black_onboarding_title"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:textSize="22sp"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@id/toolbar_sport"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_select_sport"
        app:layout_constraintStart_toStartOf="@id/tv_select_sport"
        android:text="@string/select_sport_at_least_one"
        android:includeFontPadding="false"
        android:layout_marginTop="4dp"
        android:textColor="@color/gray03"
        android:textSize="12sp"
        android:fontFamily="@font/noto_sans_kr_regular"/>

    <TextView
        android:id="@+id/btn_next"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:text="@string/next_three_over_four"
        android:gravity="center"
        android:textColor="@color/white"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:textSize="16sp"
        android:background="@drawable/selector_button_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        android:onClick="@{(view)->fragment.checkForNavigationToProfile(view)}"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>