<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="dialog"
            type="wupitch.android.presentation.signup.StopSignupDialog" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="292dp"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog_warning_signup"
   >

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/close"
        android:onClick="@{() -> dialog.dismiss()}"/>

    <TextView
        android:id="@+id/icon_warning"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toBottomOf="@id/iv_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/icon_warning_stop_signup"/>

    <TextView
        android:id="@+id/tv_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/icon_warning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/warning_stop_signup"
        android:gravity="start"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="28dp"/>

    <TextView
        android:id="@+id/tv_stop_signup"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="@id/tv_continue_signup"
        android:background="@drawable/background_btn_stop_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="@id/tv_continue_signup"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="6dp"
        android:text="@string/stop_signup"
        android:gravity="center"
        android:textSize="14sp"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:onClick="@{() -> dialog.listener.onStopSignupClick()}"/>

    <TextView
        android:id="@+id/tv_continue_signup"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_warning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/background_btn_signup_active"
        android:text="@string/continue_signup"
        android:textSize="14sp"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:onClick="@{() -> dialog.dismiss()}"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
