<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragment"
            type="wupitch.android.presentation.signup.RegionFragment" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <wupitch.android.common.CustomToolbar
        android:id="@+id/toolbar_region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:leftIcon="@drawable/left"
        app:rightIcon="@drawable/close"
        on_left_icon_click="@{fragment.navigateUp}"
        on_right_icon_click="@{fragment.requireActivity().finish}"
        />

    <TextView
        android:id="@+id/tv_select_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_region"
        android:textColor="@color/main_black"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:textSize="22sp"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@id/toolbar_region"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_select_region"
        android:layout_width="152dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/tv_select_region"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:text="@string/select_region_btn"
        android:textColor="@drawable/selector_btn_color_region"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:includeFontPadding="false"
        android:textSize="14sp"
        android:background="@drawable/selector_btn_region"
        android:onClick="@{() ->fragment.showRegionBottomSheet()}"/>


    <TextView
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/next_two_over_four"
        android:gravity="center"
        android:textColor="@color/white"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:textSize="16sp"
        android:background="@drawable/selector_btn_signup"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        android:onClick="@{(view)->fragment.checkForNavigationToSport(view)}"/>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>